
syntax = "proto3";

package grpcapi;

service AntiBruteforce {
    rpc CheckLogin (CheckLoginRequest) returns (CheckLoginResponse);
    rpc ResetLogin(ResetLoginRequest) returns (ResetLoginResponse);
    rpc AddWhiteList(AddWhiteListRequest) returns (AddWhiteListResponse);
    rpc DeleteWhiteList(DeleteWhiteListRequest) returns (DeleteWhiteListResponse);
    rpc AddBlackList(AddBlackListRequest) returns (AddBlackListResponse);
    rpc DeleteBlackList(DeleteBlackListRequest) returns (DeleteBlackListResponse);
    rpc HealthCheck(HealthCheckRequst) returns (HealthCheckResponse);
    rpc GetState(GetStateRequest) returns (GetStateResponse);
}

message CheckLoginRequest {
    string login = 1;
    string password = 2;
    string ip = 3;
}

message CheckLoginResponse {
    bool   checked = 1;
    string reason =2;
}

message ResetLoginRequest {
    string login = 1;
    string ip = 2;
}

message ResetLoginResponse {
    bool   reseted = 1;
    string reason =2;
}

message AddWhiteListRequest {
    string ipmask = 1;
}

message AddWhiteListResponse {
    bool   added = 1;
    string reason = 2;
}

message DeleteWhiteListRequest {
    string ipmask = 1;
}

message DeleteWhiteListResponse {
    bool   deleted = 1;
    string reason = 2;
}

message AddBlackListRequest {
    string ipmask = 1;
}

message AddBlackListResponse {
    bool   added = 1;
    string reason = 2;
}

message DeleteBlackListRequest {
    string ipmask = 1;
}

message DeleteBlackListResponse {
    bool   deleted = 1;
    string reason = 2;
}

 message HealthCheckRequst {
     string apiversion = 1;
 }

 message HealthCheckResponse {
     string status = 1;
 }

message GetStateRequest {
}

message GetStateResponse {
    int32 loginRate = 1;
    int32 passwordRate = 2;
    int32 hostRate = 3;
}
